# gtk_clock

./: CMakeLists.txt  main.cpp
resources/configuration/: config.json
src/: config.cpp  config.h  context.cpp  context.h  gui.cpp  gui.h
